EXTRA_DIST = \
	audio.html	\
	cdrom.html	\
	event.html	\
	eventfunctions.html	\
	eventstructures.html	\
	general.html	\
	guide.html	\
	guideaboutsdldoc.html	\
	guideaudioexamples.html	\
	guidebasicsinit.html	\
	guidecdromexamples.html	\
	guidecredits.html	\
	guideeventexamples.html	\
	guideexamples.html	\
	guideinput.html	\
	guideinputkeyboard.html	\
	guidepreface.html	\
	guidethebasics.html	\
	guidetimeexamples.html	\
	guidevideo.html	\
	guidevideoopengl.html	\
	index.html	\
	joystick.html	\
	reference.html	\
	sdlactiveevent.html	\
	sdladdtimer.html	\
	sdlaudiocvt.html	\
	sdlaudiospec.html	\
	sdlblitsurface.html	\
	sdlbuildaudiocvt.html	\
	sdlcd.html	\
	sdlcdclose.html	\
	sdlcdeject.html	\
	sdlcdname.html	\
	sdlcdnumdrives.html	\
	sdlcdopen.html	\
	sdlcdpause.html	\
	sdlcdplay.html	\
	sdlcdplaytracks.html	\
	sdlcdresume.html	\
	sdlcdstatus.html	\
	sdlcdstop.html	\
	sdlcdtrack.html	\
	sdlcloseaudio.html	\
	sdlcolor.html	\
	sdlcondbroadcast.html	\
	sdlcondsignal.html	\
	sdlcondwait.html	\
	sdlcondwaittimeout.html	\
	sdlconvertaudio.html	\
	sdlconvertsurface.html	\
	sdlcreatecond.html	\
	sdlcreatecursor.html	\
	sdlcreatemutex.html	\
	sdlcreatergbsurface.html	\
	sdlcreatergbsurfacefrom.html	\
	sdlcreatesemaphore.html	\
	sdlcreatethread.html	\
	sdlcreateyuvoverlay.html	\
	sdldelay.html	\
	sdldestroycond.html	\
	sdldestroymutex.html	\
	sdldestroysemaphore.html	\
	sdldisplayformat.html	\
	sdldisplayformatalpha.html	\
	sdldisplayyuvoverlay.html	\
	sdlenablekeyrepeat.html	\
	sdlenableunicode.html	\
	sdlenvvars.html	\
	sdlevent.html	\
	sdleventstate.html	\
	sdlexposeevent.html	\
	sdlfillrect.html	\
	sdlflip.html	\
	sdlfreecursor.html	\
	sdlfreesurface.html	\
	sdlfreewav.html	\
	sdlfreeyuvoverlay.html	\
	sdlgetappstate.html	\
	sdlgetaudiostatus.html	\
	sdlgetcliprect.html	\
	sdlgetcursor.html	\
	sdlgeterror.html	\
	sdlgeteventfilter.html	\
	sdlgetgammaramp.html	\
	sdlgetkeyname.html	\
	sdlgetkeystate.html	\
	sdlgetmodstate.html	\
	sdlgetmousestate.html	\
	sdlgetrelativemousestate.html	\
	sdlgetrgb.html	\
	sdlgetrgba.html	\
	sdlgetthreadid.html	\
	sdlgetticks.html	\
	sdlgetvideoinfo.html	\
	sdlgetvideosurface.html	\
	sdlglattr.html	\
	sdlglgetattribute.html	\
	sdlglgetprocaddress.html	\
	sdlglloadlibrary.html	\
	sdlglsetattribute.html	\
	sdlglswapbuffers.html	\
	sdlinit.html	\
	sdlinitsubsystem.html	\
	sdljoyaxisevent.html	\
	sdljoyballevent.html	\
	sdljoybuttonevent.html	\
	sdljoyhatevent.html	\
	sdljoystickclose.html	\
	sdljoystickeventstate.html	\
	sdljoystickgetaxis.html	\
	sdljoystickgetball.html	\
	sdljoystickgetbutton.html	\
	sdljoystickgethat.html	\
	sdljoystickindex.html	\
	sdljoystickname.html	\
	sdljoysticknumaxes.html	\
	sdljoysticknumballs.html	\
	sdljoysticknumbuttons.html	\
	sdljoysticknumhats.html	\
	sdljoystickopen.html	\
	sdljoystickopened.html	\
	sdljoystickupdate.html	\
	sdlkey.html	\
	sdlkeyboardevent.html	\
	sdlkeysym.html	\
	sdlkillthread.html	\
	sdllistmodes.html	\
	sdlloadbmp.html	\
	sdlloadwav.html	\
	sdllockaudio.html	\
	sdllocksurface.html	\
	sdllockyuvoverlay.html	\
	sdlmaprgb.html	\
	sdlmaprgba.html	\
	sdlmixaudio.html	\
	sdlmousebuttonevent.html	\
	sdlmousemotionevent.html	\
	sdlmutexp.html	\
	sdlmutexv.html	\
	sdlnumjoysticks.html	\
	sdlopenaudio.html	\
	sdloverlay.html	\
	sdlpalette.html	\
	sdlpauseaudio.html	\
	sdlpeepevents.html	\
	sdlpixelformat.html	\
	sdlpollevent.html	\
	sdlpumpevents.html	\
	sdlpushevent.html	\
	sdlquit.html	\
	sdlquitevent.html	\
	sdlquitsubsystem.html	\
	sdlrect.html	\
	sdlremovetimer.html	\
	sdlresizeevent.html	\
	sdlsavebmp.html	\
	sdlsempost.html	\
	sdlsemtrywait.html	\
	sdlsemvalue.html	\
	sdlsemwait.html	\
	sdlsemwaittimeout.html	\
	sdlsetalpha.html	\
	sdlsetcliprect.html	\
	sdlsetcolorkey.html	\
	sdlsetcolors.html	\
	sdlsetcursor.html	\
	sdlseteventfilter.html	\
	sdlsetgamma.html	\
	sdlsetgammaramp.html	\
	sdlsetmodstate.html	\
	sdlsetpalette.html	\
	sdlsettimer.html	\
	sdlsetvideomode.html	\
	sdlshowcursor.html	\
	sdlsurface.html	\
	sdlsyswmevent.html	\
	sdlthreadid.html	\
	sdlunlockaudio.html	\
	sdlunlocksurface.html	\
	sdlunlockyuvoverlay.html	\
	sdlupdaterect.html	\
	sdlupdaterects.html	\
	sdluserevent.html	\
	sdlvideodrivername.html	\
	sdlvideoinfo.html	\
	sdlvideomodeok.html	\
	sdlwaitevent.html	\
	sdlwaitthread.html	\
	sdlwarpmouse.html	\
	sdlwasinit.html	\
	sdlwmgetcaption.html	\
	sdlwmgrabinput.html	\
	sdlwmiconifywindow.html	\
	sdlwmsetcaption.html	\
	sdlwmseticon.html	\
	sdlwmtogglefullscreen.html	\
	thread.html	\
	time.html	\
	video.html	\
	wm.html
