
## Makefile.am for the SDL event handling library

noinst_LTLIBRARIES = libevents.la

# Include the architecture-independent sources
COMMON_SRCS =			\
	SDL_events.c		\
	SDL_events_c.h		\
	SDL_expose.c		\
	SDL_sysevents.h		\
	SDL_quit.c		\
	SDL_active.c		\
	SDL_keyboard.c		\
	SDL_mouse.c		\
	SDL_resize.c

libevents_la_SOURCES = $(COMMON_SRCS)

