
## Makefile.am for SDL using Xbios/Dma/whatever available audio functions

noinst_LTLIBRARIES = libaudio_mintaudio.la
libaudio_mintaudio_la_SOURCES = $(SRCS)

# The SDL audio driver sources
SRCS =	SDL_mintaudio.c	\
	SDL_mintaudio.h	\
	SDL_mintaudiointerrupt.S \
	SDL_mintaudiointerrupt_s.h \
	SDL_mintaudiodma.h \
	SDL_mintaudiogsxb.h

