## Makefile.am for SDL using Xbios/Dma/whatever available audio functions

noinst_LTLIBRARIES = libaudio_mintaudio.la
libaudio_mintaudio_la_SOURCES = $(SRCS)

# The SDL audio driver sources
SRCS = \
	SDL_mintaudio.c	\
	SDL_mintaudio.h	\
	SDL_mintaudio_dma8.c	\
	SDL_mintaudio_dma8.h	\
	SDL_mintaudio_gsxb.c	\
	SDL_mintaudio_gsxb.h	\
	SDL_mintaudio_it.S	\
	SDL_mintaudio_mcsn.c	\
	SDL_mintaudio_mcsn.h	\
	SDL_mintaudio_stfa.c	\
	SDL_mintaudio_stfa.h	\
	SDL_mintaudio_xbios.c
