
## Makefile.am for the Mac OS X cdrom driver for SDL

noinst_LTLIBRARIES = libcdrom_macosx.la
libcdrom_macosx_la_SOURCES = $(SRCS)

# The SDL cdrom driver sources
SRCS = \
	SDL_syscdrom_c.h \
	SDL_syscdrom.c \
	AudioFilePlayer.h \
	AudioFilePlayer.cpp \
	AudioFileReaderThread.cpp \
	CAGuard.h \
	CAGuard.cpp \
	CDPlayer.h \
	CDPlayer.cpp
