
## Makefile.am for SDL using the Atari bios

noinst_LTLIBRARIES = libvideo_ataricommon.la
libvideo_ataricommon_la_SOURCES = $(ATARICOMMON_SRCS)

# The SDL Atari bios driver sources
ATARICOMMON_SRCS = 	\
	SDL_ataric2p.S	\
	SDL_ataric2p_s.h	\
	SDL_atarieddi.S	\
	SDL_atarieddi_s.h	\
	SDL_atarievents.c	\
	SDL_atarievents_c.h	\
	SDL_atarikeys.h	\
	SDL_atarimxalloc.c	\
	SDL_atarimxalloc_c.h	\
	SDL_biosevents.c	\
	SDL_biosevents_c.h	\
	SDL_gemdosevents.c	\
	SDL_gemdosevents_c.h \
	SDL_ikbdevents.c	\
	SDL_ikbdevents_c.h \
	SDL_ikbdinterrupt.S	\
	SDL_ikbdinterrupt_s.h \
	SDL_xbiosevents.c \
	SDL_xbiosevents_c.h \
	SDL_xbiosinterrupt.S \
	SDL_xbiosinterrupt_s.h
