
## Makefile.am for SDL using the BeOS BWindow video driver

noinst_LTLIBRARIES = libvideo_bwindow.la
libvideo_bwindow_la_SOURCES = $(BWINDOW_SRCS)

# The SDL BWindow video driver sources
BWINDOW_SRCS = 			\
	SDL_BView.h		\
	SDL_BWin.h		\
	SDL_lowvideo.h		\
	SDL_sysevents.cc	\
	SDL_sysevents_c.h	\
	SDL_sysmouse.cc		\
	SDL_sysmouse_c.h	\
	SDL_sysvideo.cc		\
	SDL_syswm.cc		\
	SDL_syswm_c.h		\
	SDL_sysyuv.cc		\
	SDL_sysyuv.h

