
## Makefile.am for SDL using the CyberGFX video driver

noinst_LTLIBRARIES = libvideo_cgx.la
libvideo_cgx_la_SOURCES = $(CGX_SRCS)

# The SDL CyberGFX video driver sources
CGX_SRCS = 			\
	SDL_amigaevents.c	\
	SDL_amigaevents_c.h	\
	SDL_amigamouse.c	\
	SDL_amigamouse_c.h	\
	SDL_cgxaccel.c		\
	SDL_cgxgl.c		\
	SDL_cgxgl_c.h		\
	SDL_cgximage.c		\
	SDL_cgximage_c.h	\
	SDL_cgxmodes.c		\
	SDL_cgxmodes_c.h	\
	SDL_cgxvideo.c		\
	SDL_cgxvideo.h		\
	SDL_cgxwm.c		\
	SDL_cgxwm_c.h		\
	SDL_cgxyuv.c		\
	SDL_cgxyuv_c.h
