
## Makefile.am for SDL using the DGA 2.0 video driver

noinst_LTLIBRARIES = libvideo_dga.la
libvideo_dga_la_SOURCES = $(DGA_SRCS)

# The SDL DGA 2.0 video driver sources
DGA_SRCS = 			\
	SDL_dgaevents.c		\
	SDL_dgaevents_c.h	\
	SDL_dgamouse.c		\
	SDL_dgamouse_c.h	\
	SDL_dgavideo.c		\
	SDL_dgavideo.h
