
## Makefile.am for SDL using the null video driver

noinst_LTLIBRARIES = libvideo_null.la
libvideo_null_la_SOURCES = $(NULL_SRCS)

# The SDL null video driver sources
NULL_SRCS = 			\
	SDL_nullvideo.h		\
	SDL_nullevents.c	\
	SDL_nullevents_c.h	\
	SDL_nullmouse.c		\
	SDL_nullmouse_c.h	\
	SDL_nullvideo.c

