
## Makefile.am for SDL using the framebuffer console video driver

noinst_LTLIBRARIES = libvideo_fbcon.la
libvideo_fbcon_la_SOURCES = $(FBCON_SRCS)

# The SDL framebuffer console video driver sources
FBCON_SRCS = 			\
	SDL_fbkeys.h		\
	SDL_fbvideo.h		\
	SDL_fbelo.c \
	SDL_fbelo.h \
	SDL_fbevents.c		\
	SDL_fbevents_c.h	\
	SDL_fb3dfx.c		\
	SDL_fb3dfx.h		\
	SDL_fbmatrox.c		\
	SDL_fbmatrox.h		\
	SDL_fbmouse.c		\
	SDL_fbmouse_c.h		\
	SDL_fbriva.c		\
	SDL_fbriva.h		\
	SDL_fbvideo.c		\
	3dfx_mmio.h		\
	3dfx_regs.h		\
	matrox_mmio.h		\
	matrox_regs.h		\
	riva_mmio.h		\
	riva_regs.h
