
## Makefile.am for SDL using the GEM video driver

noinst_LTLIBRARIES = libvideo_gem.la
libvideo_gem_la_SOURCES = $(GEM_SRCS)

# The SDL GEM video driver sources
GEM_SRCS = 	\
	SDL_gemvideo.h	\
	SDL_gemvideo.c	\
	SDL_gemevents_c.h	\
	SDL_gemevents.c \
	SDL_gemmouse_c.h	\
	SDL_gemmouse.c \
	SDL_gemwm_c.h	\
	SDL_gemwm.c
